# pycon-de-2025

./: .gitignore  README.md  pixi.toml  test.mojo  validate.py
src/cpp_bindings/: CMakeLists.txt  pixi.toml
src/cpp_bindings/src/: bindings.cpp
src/nodejs_project/: .gitignore  README.md  package-lock.json  package.json  pixi.toml  rattler-vs-conda-build.js
src/python_bindings/: README.md  pyproject.toml
src/python_bindings/src/python_bindings/: __init__.py  person.py
src/rust_bindings/: .gitignore  Cargo.toml  README.md  __init__.py  pixi.toml  pyproject.toml
src/rust_bindings/src/: lib.rs
src/rust_bindings/tests/: test_maturin_starter.py  test_submodule.py
